# ridemanager

./: .gitignore  README.md
RideManager/: .gitignore  AGENTS.md  Program.cs  RideManager.csproj  RideManager.sln  TODO.md  config.toml
RideManager/cpp_rknn/: CMakeLists.txt  README.md
RideManager/cpp_rknn/include/: ridemanager_rknn.h
RideManager/cpp_rknn/src/: ridemanager_rknn.cpp
RideManager/docs/: app_connection_protocol.md  pfld_face_landmarks_csharp.md  psql.md  randar_bluetooth.md  ride_ai_onnx.md  twinlitenet_yolo26n_front_detection_csharp.md  yolopv2_lane_detection_csharp.md
RideManager/docs/examples/: yunet_demo.py
RideManager/scripts/: ble_radar_stream.py  bluez_appsync_host.py  bluez_radar_diagnostics.py  convert_onnx_to_rknn.py  convert_project_onnx_to_rknn.py  export_twinlitenet_onnx.py  export_ufldv2_onnx.py  export_yolopv2_onnx.py  init_psql.sh
RideManager/src/actuators/: IBrakeController.cs  ISpeakerNotifier.cs  NoopBrakeController.cs  NoopSpeakerNotifier.cs
RideManager/src/appsync/: AppSyncCursor.cs  AppSyncJson.cs  AppSyncLiveTester.cs  AppSyncModels.cs  AppSyncNotificationFramer.cs  AppSyncProtocolHandler.cs  AppSyncServer.cs  IAppSyncPeripheral.cs  IAppSyncRepository.cs  LinuxBlueZAppSyncPeripheral.cs  MacOSCoreBluetoothAppSyncPeripheral.cs  PostgresAppSyncRepository.cs  UnsupportedAppSyncPeripheral.cs
RideManager/src/camera/: BroadcastCameraSource.cs  CameraAnalyzer.cs  CameraBoundingBox.cs  CameraFinding.cs  CameraFrame.cs  CameraFrameState.cs  CameraId.cs  CameraLivePreviewServer.cs  CameraLiveTestOptions.cs  CameraLiveTester.cs  CameraPipeline.cs  CameraPipelineFactory.cs  CameraPipelineMetrics.cs  CameraPipelineResult.cs  FaceCameraAnalyzer.cs  FaceFatigueEstimator.cs  FacePipelineFramePreprocessor.cs  FullFramePreprocessor.cs  ICameraAnalyzer.cs  ICameraSource.cs  IFramePreprocessor.cs  ModelInputTensorFactory.cs  MultiModelCameraAnalyzer.cs  OpenCvCameraSource.cs  OpenCvFramePreprocessor.cs  ProcessedFrame.cs  SimulatedCameraSource.cs
RideManager/src/core/: CameraRiskAssessment.cs  CameraRiskOptions.cs  RideSupervisor.cs  SafetyDecision.cs  SafetyDecisionEngine.cs  SafetyRiskLevel.cs
RideManager/src/data/: DetectionEvent.cs  IDetectionEventWriter.cs  PostgresDetectionEventWriter.cs  RideManagerDbContext.cs  RideManagerEntities.cs
RideManager/src/models/: IInferenceEngine.cs  InferenceInput.cs  InferenceOutput.cs  InferenceOutputParser.cs  InferenceRawTensor.cs  ModelBackend.cs  ModelRuntimeSelector.cs  NativeFloatTensor.cs  OnnxInferenceEngine.cs  RknnInferenceEngine.cs  RknnNative.cs
RideManager/src/sensors/: BlueZProxies.cs  FallbackRadarClient.cs  GyroSensorReader.cs  IRadarClient.cs  ISensorReader.cs  MacOSCoreBluetoothRadarClient.cs  PythonRadarClient.cs  RadarBluetoothClient.cs  RadarBluetoothReader.cs  RadarClientFactory.cs  RadarConnectionState.cs  RadarFrame.cs  RadarHealth.cs  RadarHistory.cs  RadarLivePreviewServer.cs  RadarLiveTestOptions.cs  RadarLiveTester.cs  RadarProtocol.cs  RadarSnapshotValues.cs  RadarStatusFlags.cs  (+2 more)
RideManager/tests/: AppSyncProtocolTests.cs  BroadcastCameraSourceTests.cs  CameraPipelineFactoryTests.cs  ConfigLoaderTests.cs  FaceFatigueEstimatorTests.cs  HttpListenerEndpointTests.cs  InferenceTensorTests.cs  OpenCvCameraSourceTests.cs  RadarClientFactoryTests.cs  RideManager.Tests.csproj  RideManagerJsonContextTests.cs  SafetyDecisionEngineTests.cs
RideManagerQml/: AppController.cpp  AppController.h  CMakeLists.txt  CameraFindingModel.cpp  CameraFindingModel.h  DatabaseManager.cpp  DatabaseManager.h  Main.qml  RideManagerConfig.cpp  RideManagerConfig.h  SafetyDecisionModel.cpp  SafetyDecisionModel.h  SensorCatalog.cpp  SensorCatalog.h  SensorReadingModel.cpp  SensorReadingModel.h  main.cpp
RideManagerQml/.cache/clangd/index/: AppController.cpp.0ACBA2694DCEA919.idx  AppController.h.ACDE24F53BE61E68.idx  CameraFindingModel.cpp.71B9ADF65823FA1A.idx  CameraFindingModel.h.9454416EF3A846EE.idx  DatabaseManager.cpp.55080B7622B971BA.idx  DatabaseManager.h.B874A931ACFE5E80.idx  SafetyDecisionModel.cpp.A6354F9F2B89030F.idx  SafetyDecisionModel.h.6BF288E2206102CE.idx  SensorReadingModel.cpp.76271F539F89194D.idx  SensorReadingModel.h.DFA7415C3AC967ED.idx  main.cpp.9847CA2E662EAF1B.idx
RideManagerQml/qml/components/: CameraPanel.qml  DataTable.qml  RiskCard.qml  SensorTrend.qml  SideNav.qml  StatTile.qml  StatusBar.qml
imu_project/: CMakeLists.txt  main.cpp
imu_project/config/: config.yaml
imu_project/include/algorithm/: LowPassFilter.h  MadgwickAHRS.h
imu_project/include/common/: BlockingQueue.h  IMUData.h  Logger.h  TimeUtils.h  Uuid.h
imu_project/include/config/: AppConfig.h  ConfigLoader.h
imu_project/include/database/: PostgreSQLManager.h
imu_project/include/driver/: MPU6050.h
imu_project/include/service/: IMUService.h
imu_project/src/algorithm/: MadgwickAHRS.cpp
imu_project/src/config/: ConfigLoader.cpp
imu_project/src/database/: PostgreSQLManager.cpp
imu_project/src/driver/: MPU6050.cpp
imu_project/src/service/: IMUService.cpp
scripts/: start_ridemanager_all.sh
(+8 files in other folders)
